update color, fix width from overflowing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-color: #6e6e6e;
+  background-color: #dddddd;
   font-family: "Nunito", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
